--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,3 @@
-.App {
-  text-align: center;
-}
-
 .App-header {
   background-color: #282c34;
   min-height: 100vh;
@@ -13,31 +9,22 @@
   color: white;
 }
 
-.btn-group {
-  background-color: rgb(95, 99, 102); 
-  border: 1px solid rgb(125, 128, 125); 
+.btn-groups {
+  background-color: rgb(85, 87, 87); 
+  border: 1px solid rgb(53, 53, 53); 
   color: white; 
-  text-align: left;
-  padding: 2px 5px; 
+  text-align: left; 
   cursor: pointer; 
-  width: 10%; /* Set a width if needed */
-  display: block; /* Make the buttons appear below each other */
-}
-
-.btn-group button:not(:last-child) {
-  border-bottom: none; /* Prevent double borders */
-}
-
-/* Add a background color on hover */
-.btn-group button:hover {
-  background-color: #3e8e41;
-}
-
-
-.App-link {
-  color: #61dafb;
+  width: 10em;
+  display: flex;
+  border-radius: 25px;   
 }
 
 .heroes {
   position: left;
+}
+
+.grid-container
+{
+  position: flex;
 }
