--- a/src/App.css
+++ b/src/App.css
@@ -5,26 +5,53 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
   color: white;
 }
+
+.main-display {
+  display: flex;  
+}
+
 
 .btn-groups {
   background-color: rgb(85, 87, 87); 
   border: 1px solid rgb(53, 53, 53); 
+  font-size: 10px;
   color: white; 
   text-align: left; 
   cursor: pointer; 
   width: 10em;
   display: flex;
-  border-radius: 25px;   
-}
-
-.heroes {
-  position: left;
+  border-radius: 25px;      
 }
 
 .grid-container
 {
-  position: flex;
+  display: flex;
+}
+
+.grid-item-hero {
+  color: white;
+  position: block;
+  margin-left: auto;
+  margin-right: auto;
+  top: 20px;
+}
+
+.grid-item-player {
+  color: white;
+  position: absolute;
+  right: 30px;    
+  top: 20px;
+}
+
+.hero-text{
+  font-size: 0.5em;
+}
+
+.player-text{
+  display: flex;
+  flex-direction: column;
+  font-size: 0.5em;  
+  align-items: flex-end;  
 }
