--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,23 @@
   display: flex;  
 }
 
+.loader {
+  border: 16px solid #f3f3f3; /* Light grey */
+  border-top: 16px solid #404041; /* Blue */
+  border-radius: 50%;
+  width: 120px;
+  height: 120px;
+  animation: spin 2s linear infinite;
+  position: fixed;
+  left: 50%;
+  top: 50px;
+} 
+
+@keyframes spin {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
 
 .btn-groups {
   background-color: rgb(85, 87, 87); 
@@ -27,20 +44,22 @@
 
 .grid-container
 {
-  display: flex;
+  position: fixed;
 }
 
 .grid-item-hero {
   color: white;
-  position: block;
+  position: fixed;
   margin-left: auto;
   margin-right: auto;
   top: 20px;
+  text-align: center;
+  width: 50%;
 }
 
 .grid-item-player {
   color: white;
-  position: absolute;
+  position: fixed;
   right: 30px;    
   top: 20px;
 }
